[package]
name = "ntop"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossterm = { version = "0.29.0", features = ["event-stream"] }
ratatui = "0.30.0"
futures = "0.3.32"
