[package]
name = "ntop"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["rt", "process", "sync", "time", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossterm = { version = "0.29.0", features = ["event-stream"] }
ratatui = "0.30.0"
futures = "0.3.32"
chrono = { version = "0.4.44", default-features = false, features = ["std", "now"] }
ratatui-widgets = "0.3.0"
